--- a/style.css
+++ b/style.css
@@ -57,14 +57,12 @@ header{
 
 }
 
-.menu h2{
-    color: orange;
+.menu{
+    margin: 30px;
 }
 
-.menu{
-    display: flex;
-    width: 95%;
-    margin: 3%;
+.menu h2{
+    color: orange;
 }
 
 .welcome img{
