--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
+body{
+    margin: 0;
+}
+
 .entete{
     color: white;
     font-family: 'Montserrat', sans-serif;
     display: flex;
     justify-content: space-between;
     padding: 1%;
+    background-image: url(images/fancy-pants.jpg);
+    background-size: cover;
+    background-position: top;
 }
 
 img{
@@ -40,12 +47,6 @@ li{
     background-position: center;
 }
 
-header{
-    background-image: url(images/fancy-pants.jpg);
-    background-size: cover;
-    background-position: top;
-}
-
 .text{
     background-image: url(images/fancy-pants.jpg);
     background-size: cover;
@@ -55,18 +56,6 @@ header{
     text-align: center;
     font-family: 'Playpen Sans';
 
-}
-
-.menu{
-    margin: 30px;
-}
-
-.menu h2{
-    color: orange;
-}
-
-.welcome img{
-    width: 70%;
 }
 
 footer{
@@ -86,14 +75,6 @@ footer{
     font-size: 1.5em;
 }
 
-.flexible iframe{
-    border-radius: 3%;
-}
-
-.work{
-    margin-right: 5%;
-}
-
 .perso img{
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 10%;
@@ -101,14 +82,46 @@ footer{
     margin: 2.3%;
 }
 
-.work{
-    margin-bottom: 30% ;
+.gridprincipale {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    padding-top: 2%;
+    gap: 5%;
 }
 
-.menu{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 30px;
+.gridprincipale h1, h2, h3, h4{
+    color: orange;
+    font-size: 2em;
+    margin-top: 0;
+}
+
+.grid1{
+    grid-column: 1/2;
+    grid-row: 1/5;
+    padding-left: 20%;
+}
+
+.grid1 img{
+    width: 100%;
+}
+
+.grid2{
+    grid-column: 2/3;
+    grid-row: 1/3;
+    padding-left: 20%;
+}
+
+.grid3{
+    grid-column: 2/3;
+    grid-row: 3/5;
+    padding-left: 20%;
+}
+
+.grid4{
+    grid-column:3/5;
+    grid-row:1/5;
+    padding-left: 10%;
 }
 
 li{
@@ -214,4 +227,20 @@ textarea{
 .ulprincipale4 a{
     text-decoration: none;
     color: white;
+}
+
+@media screen and (min-width : 400px) and (max-width : 900px)  {
+    p{
+        color: aqua;
+    }
+}
+
+.where iframe{
+    width: 100%;
+    height: 70%;
+}
+
+.p1{
+    color: gray;
+    font-style: italic;
 }
