--- a/style.css
+++ b/style.css
@@ -87,6 +87,8 @@ footer{
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
     padding-top: 2%;
+    margin-bottom: 2%;
+    padding-left: 2%;
     gap: 5%;
 }
 
@@ -99,7 +101,9 @@ footer{
 .grid1{
     grid-column: 1/2;
     grid-row: 1/5;
-    padding-left: 20%;
+    padding-left: 10%;
+    border: rgba(0, 0, 0, 0.2) solid 1px;
+    padding-bottom: 5%;
 }
 
 .grid1 img{
@@ -112,16 +116,28 @@ footer{
     padding-left: 20%;
 }
 
+.grid2 h2{
+    margin: 0;
+}
+
 .grid3{
     grid-column: 2/3;
     grid-row: 3/5;
     padding-left: 20%;
 }
 
+.grid3 h3{
+    margin: 0;
+}
+
 .grid4{
     grid-column:3/5;
     grid-row:1/5;
     padding-left: 10%;
+}
+
+.grid4 h4{
+    margin: 0;
 }
 
 li{
@@ -171,6 +187,7 @@ input{
 
 textarea{
     border-radius: 5px;
+    color: gray;
 }
 
 .ulfirst ul{
@@ -229,18 +246,24 @@ textarea{
     color: white;
 }
 
-@media screen and (min-width : 400px) and (max-width : 900px)  {
-    p{
-        color: aqua;
-    }
-}
-
-.where iframe{
-    width: 100%;
-    height: 70%;
-}
 
 .p1{
     color: gray;
     font-style: italic;
+}
+
+.fin h2{
+    color: white;
+}
+
+@media screen and (max-width : 400px){
+    .perso img{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .listes{
+        display: flex;
+        flex-direction: column;
+    }
 }
