--- a/style.css
+++ b/style.css
@@ -255,15 +255,68 @@ textarea{
 .fin h2{
     color: white;
 }
+.container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+  }
+  
+  /* Then style the iframe to fit in the container div with full height and width */
+  .responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+  }
 
-@media screen and (max-width : 400px){
-    .perso img{
-        display: flex;
+@media screen and (max-width : 960px){
+    .listes{
+        flex-direction: column;
+        gap: 0%;
+    }
+
+    .entete{
         flex-direction: column;
     }
 
-    .listes{
+    .perso img{
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .logo{
+        width: 100%;
+    }
+
+    .perso{
+        display: flex;
+        flex-direction: column;    
+    }
+
+    .perso img{
+        width: 100%;
+    }
+
+    .gridprincipale{
         display: flex;
         flex-direction: column;
+        padding: 0;
+        margin: 5%;
+    }
+
+    .grid1, .grid2, .grid3, .grid4{
+        padding:0;
+    }
+
+    .fin{
+        flex-direction: column;
+    }
+
+    .contact, .where, .us, .WIDGETHER{
+        padding-bottom: 5%;
     }
 }
